5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1715_3068.log
== TEST (2019-05-02 16:09:18) 
-- CODE:
arma = input("nome da arma: ")
destreza = input("destreza: ")
print(arma)
if (arma == cimitarra):
	dano = 2*
-- ERROR:
File "XXXX", line 5
    dano = 2*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:25) 
-- CODE:
arma = input("nome da arma: ")
destreza = input("destreza: ")
print(arma)
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:59) 
-- CODE:
arma = input("nome da arma: ")
destreza = input("destreza: ")
print(arma.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fed7707d5e0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:11:20) 
-- CODE:
arma = input("nome da arma: ")
destreza = input("destreza: ")
print(arma)
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:15) 
-- CODE:
arma = input("nome da arma: ")
destreza = int(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	dano = 2*s + 2*destreza
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:30) 
-- CODE:
arma = input("nome da arma: ")
destreza = int(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	dano = 2*s + 2*destreza
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:51) 
-- CODE:
arma = input("nome da arma: ")
destreza = int(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	dano = 2*s + destreza
if (arma == "SABRE"):
	dano = s + 2*destreza	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    dano = s + 2*destreza	
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:27) 
-- CODE:
arma = input("nome da arma: ")
destreza = int(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	dano = 2*s + destreza
if (arma == "SABRE"):
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    dano = s + 2*destreza	
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:32:29) 
-- CODE:
arma = input("nome da arma: ")
destreza = int(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	dano = 2*s + destreza
if (arma == "SABRE"):
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.167555
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3068/main.py", line 10, in <module>
    dano = s + 2*destreza	
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:31) 
-- CODE:
arma = input("nome da arma: ")
destreza = int(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	dano = 2*s + destreza
if (arma == "SABRE"):
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    dano = s + 2*destreza	
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:11) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	dano = 2*s + destreza
if (arma == "SABRE"):
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    dano = s + 2*destreza	
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:33) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:43) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:40:55) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.178495
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
SABRE
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
CIMITARRA
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
KATANA
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:05) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:50) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:42:09) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.182684
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
SABRE
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
CIMITARRA
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
KATANA
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:11) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza	
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:06) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:06) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:06) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:07) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:43:07) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.122747
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
SABRE
4.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
CIMITARRA
6.0
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
KATANA
10.0
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:08) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
SABRE
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:10) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))
print(arma)

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.117121
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
SABRE
4.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
CIMITARRA
6.0
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
KATANA
10.0
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:37) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.16863
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
4.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
6.0
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
10.0
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:38) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:53) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:00) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza <= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza + 2*destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza + 2*destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:31) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza => 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 7
    s = 2 >= destreza => 20
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:02) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza >= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 11
    s = 2 >= destreza => destreza
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:05) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza >= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 11
    s = 2 >= destreza => destreza
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:32) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza >= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 11
    s = 2 >= destreza => destreza
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:23) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2 >= destreza >= 20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 11
    s = 2 >= destreza => destreza
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:53) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2>= destreza<=20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 11
    s = 2 >= destreza => destreza
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:57) 
-- CODE:
arma = input("nome da arma: ")
destreza = float(input("destreza: "))
destreza = float(input(""))
destreza = float(input(""))

if (arma == "CIMITARRA"):
	s = 2>= destreza<=20
	dano = 2*s + 2*destreza
	print(dano)
if (arma == "KATANA"):
	s = 2 >= destreza => destreza
	dano = 2*s + destreza
	print(dano)
if (arma == "SABRE"):
	s = 2 >= destreza => destreza
	dano = s + 2*destreza
	print(dano)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 11
    s = 2 >= destreza => destreza
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
